netpol/03-deny-ingress-namespace-all-traffic.yaml
#kubectl create ns space3
#kubectl create ns space4
#kubectl run app1 --image=nginx --labels="app=app1" --expose --port=80
#kubectl run app2 --image=nginx --labels="app=app2" --expose --port=80
#kubectl run app3 --image=nginx --labels="app=app3" --namespace space3 --expose --port=80
#kubectl run app4 --image=nginx --labels="app=app4" --namespace space4 --expose --port=80

#Deny all ingress to all pod within namespace default (include the pods inside ns default)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-traffic-ns
  namespace: default
spec:
  podSelector:
    matchLabels:
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector: {}
