netpol/05-allow-ingress-app-all-ns.yaml
#kubectl create ns space3
#kubectl create ns space4
#kubectl run app1 --image=nginx --labels="app=app1" --expose --port=80
#kubectl run app2 --image=nginx --labels="app=app2" --expose --port=80
#kubectl run app3 --image=nginx --labels="app=app3" --namespace space3 --expose --port=80
#kubectl run app4 --image=nginx --labels="app=app4" --namespace space4 --expose --port=80

#
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-traffic-ns
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: app1
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
