netpol/06-allow-ingress-specific-ns.yaml
#kubectl create ns space3
#kubectl create ns space4
#k label ns/space3 env=production
#kubectl run app1 --image=nginx --labels="app=app1" --expose --port=80
#kubectl run app2 --image=nginx --labels="app=app2" --expose --port=80
#kubectl run app3 --image=nginx --labels="app=app3" --namespace space3 --expose --port=80
#kubectl run app4 --image=nginx --labels="app=app4" --namespace space4 --expose --port=80

# Only pods within ns labeled env:production can ingress
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-specific-ns
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: app1
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              env: production
