netpol/08-deny-egress.yaml


kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-egress-all
spec:
  podSelector:
    matchLabels:
      app: app1
    policyTypes:
    - Egress
  egress: []
