netpol/09-deny-egress-app.yaml
#kubectl run app1 --image=nginx --labels="app=app1" --expose --port=80
#kubectl run app2 --image=nginx --labels="app=app2" --expose --port=80

# Deny all egress traffic from all pod within ns space
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-egress-all-namespace
  namespace: default
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress: []
